--- a/client/package.json
+++ b/client/package.json
@@ -14,5 +14,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://localhost:5000/",
+  "homepage": "http://www.customl.ink/
 }
